kubernetes/05-simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-simulator-deploy
  namespace: smart-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-home-simulator
  template:
    metadata:
      labels:
        app: smart-home-simulator
    spec:
      containers:
        - name: smart-home-simulator-container
          image: nadavnv/smart-home-simulator:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - cat status | grep healthy
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - cat status | grep ready
            initialDelaySeconds: 10
            periodSeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
