kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SmartHomeBackend
  namespace: SmartHome
spec:
  replicas: 3
  selector:
    matchLabels:
      app: SmartHomeBackend
  template:
    metadata:
      labels:
        app: SmartHomeBackend
    spec:
      containers:
        - name: SmartHomeBackend-container
          image: yardenziv/smarthome_backend:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
          - containerPort: 5200
