kubernetes/simulator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-simulator-deploy
  namespace: smart-home
spec:
  replicas: 3
  selector:
    matchLabels:
      app: smart-home-simulator
  template:
    metadata:
      name: smart-home-simulator-pod
      labels:
        app: smart-home-simulator
    spec:
      containers:
        - name: smart-home-simulator-container
          image: yardenziv/smarthome_simulator:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
      livenessProbe:
        exec:
          command:
            - cat
            - status
            - "|"
            - grep
            - "healthy"
        initialDelaySeconds: 20
        periodSeconds: 5
      readinessProbe:
        exec:
          command:
            - cat
            - status
            - "|"
            - grep
            - "ready"
        initialDelaySeconds: 20
        periodSeconds: 5
