kubernetes/01-mqtt-manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mqtt-broker-deploy
  namespace: smart-home
spec:
  serviceName: mqtt-broker-svc
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-broker
  template:
    metadata:
      labels:
        app: mqtt-broker
    spec:
      containers:
        - name: mqtt-broker
          image: eclipse-mosquitto:2.0.22
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 1883
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-data
              mountPath: /mosquitto/data
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto-config
  volumeClaimTemplates:
    - metadata:
        name: data-volume
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker-svc
  namespace: smart-home
spec:
  ClusterIP: None
  selector:
    app: mqtt-broker
  ports:
    - port: 1883
      targetPort: 1883
