kubernetes/06-backend-manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: backend
  namespace: smart-home
spec:
  serviceName: backend-headless
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-flask-container
          image: nadavnv/smart-home-backend-flask:V1.0.1
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
        - name: backend-nginx-container
          image: nadavnv/smart-home-backend-nginx:V1.0.1
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
            - containerPort: 5200
          livenessProbe:
            httpGet:
              path: /healthy
              port: 5200
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 5200
            initialDelaySeconds: 10
            periodSeconds: 5
---
# Backend service
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: smart-home
spec:
  # ClusterIP by default
  selector:
    app: backend
  ports:
    - port: 5200
      targetPort: 5200
---
apiVersion: v1
kind: Service
metadata:
  name: backend-headless
  namespace: smart-home
spec:
  clusterIP: None
  selector:
    app: backend
  ports:
    - port: 5200
      targetPort: 5200
