kubernetes/06-simulator-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: simulator
  namespace: smart-home
spec:
  serviceName: simulator-headless
  replicas: 1
  selector:
    matchLabels:
      app: simulator
  template:
    metadata:
      labels:
        app: simulator
    spec:
      containers:
        - name: simulator-container
          image: nadavnv/smart-home-simulator:V1.51
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - cat status | grep healthy
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - cat status | grep ready
            initialDelaySeconds: 10
            periodSeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: simulator-headless
  namespace: smart-home
spec:
  clusterIP: None
  selector:
    app: simulator
  ports:
    - port: 5000
