kubernetes/08-prometheus-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-prometheus
  namespace: smart-home
spec:
  selector:
    matchLabels:
      app: smart-home-prometheus
  template:
    metadata:
      labels:
        app: smart-home-prometheus
    spec:
      serviceAccountName: smart-home-prometheus-sa
      containers:
        - name: smart-home-prometheus-container
          image: prom/prometheus:latest
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: smart-home-prometheus-svc
  namespace: smart-home
spec:
  selector:
    app: smart-home-prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
