kubernetes/09-grafana-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-grafana
  namespace: smart-home
spec:
  selector:
    matchLabels:
      app: smart-home-grafana
  template:
    metadata:
      labels:
        app: smart-home-grafana
    spec:
      containers:
        - name: grafana
          image: yardenziv/smarthome_grafana:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
apiVersion: v1
kind: Service
metadata:
  name: smart-home-grafana-svc
  namespace: smart-home
spec:
  type: NodePort
  selector:
    app: smart-home-grafana
  ports:
    - port: 3000
      targetPort: 3000
