kubernetes/09-prometheus-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: smart-home
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      serviceAccountName: prometheus-sa
      containers:
        - name: prometheus-container
          image: prom/prometheus:v2.53.5
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-svc
  namespace: smart-home
spec:
  # ClusterIP by default
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
