kubernetes/3-backend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-backend-deploy
  namespace: smart-home
spec:
  replicas: 2
  selector:
    matchLabels:
      app: smart-home-backend
  template:
    metadata:
      name: smart-home-backend-pod
      labels:
        app: smart-home-backend
    spec:
      containers:
        - name: smart-home-backend-container
          image: nadavnv/smart-home-backend:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
            - containerPort: 5200
          livenessProbe:
            httpGet:
              path: /healthy
              port: 5200
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 5200
            initialDelaySeconds: 10
            periodSeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
# Backend service
apiVersion: v1
kind: Service
metadata:
  name: smart-home-backend-svc
  namespace: smart-home
spec:
  # ClusterIP by default
  selector:
    app: smart-home-backend
  ports:
    - port: 5200
      targetPort: 5200
