kubernetes/7-monitoring-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-monitoring
  namespace: smart-home
spec:
  selector:
    matchLabels:
      app: smart-home-monitoring
  template:
    metadata:
      labels:
        app: smart-home-monitoring
    spec:
      containers:
        - name: smart-home-prometheus-container
          image: prom/prometheus:latest
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          ports:
            - containerPort: 9090
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 5
            periodSeconds: 10
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/prometheus.yml
              subPath: prometheus.yml
        - name: grafana
          image: yardenziv/smarthome_grafana:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 500M
            limits:
              cpu: "1"
              memory: 1Gi
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: smart-home-prometheus-svc
  namespace: smart-home
spec:
  # ClusterIP by default
  selector:
    app: smart-home-monitoring
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: smart-home-grafana-svc
  namespace: smart-home
spec:
  type: NodePort
  selector:
    app: smart-home-monitoring
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 33000
