kubernetes/backend-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SmartHomeBackend-deploy
  namespace: SmartHome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: SmartHomeBackend
  template:
    metadata:
      labels:
        app: SmartHomeBackend
    spec:
      containers:
        - name: SmartHomeBackend-container
          image: yardenziv/smarthome_backend:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
            - containerPort: 5200
      livenessProbe:
        httpGet:
          path: /healthy
          port: 5200
        initialDelaySeconds: 20
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /ready
          port: 5200
        initialDelaySeconds: 20
        periodSeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
# Backend service
apiVersion: v1
kind: Service
metadata:
  name: SmartHomeBackend-svc
  namespace: SmartHome
spec:
  # ClusterIP by default
  selector:
    app: SmartHomeBackend
  ports:
    - port: 5200
      targetPort: 5200
