kubernetes/dashboard-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SmartHomeDashboard-deploy
  namespace: SmartHome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: SmartHomeDashboard
  template:
    metadata:
      labels:
        app: SmartHomeDashboard
    spec:
      containers:
        - name: SmartHomeDashboard-container
          image: yardenziv/smarthome_dashboardend:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
            - containerPort: 3001
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
# Dashboard service
apiVersion: v1
kind: Service
metadata:
  name: SmartHomeDashboard-svc
  namespace: SmartHome
spec:
  # ClusterIP by default
  selector:
    app: SmartHomeDashboard
  ports:
    - port: 3001
      targetPort: 3001
