kubernetes/00-dashboard-svc.yaml
# Dashboard service
apiVersion: v1
kind: Service
metadata:
  name: smart-home-dashboard-svc
  namespace: smart-home
spec:
  type: LoadBalancer
  selector:
    app: smart-home-dashboard
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-home-dashboard-ingress
  namespace: smart-home
  labels:
    app.kubernetes.io/name: smart-home-dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: smart-home-dashboard.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: smart-home-dashboard-svc
                port:
                  number: 3001
