kubernetes/02-dashboard-svc.yaml
# Dashboard service
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
  namespace: smart-home
spec:
  # ClusterIP by default
  selector:
    app: dashboard
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: smart-home
  labels:
    app.kubernetes.io/name: dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dashboard.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: dashboard-svc
                port:
                  number: 3001
