kubernetes/06-dashboard-manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smart-home-dashboard-deploy
  namespace: smart-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smart-home-dashboard
  template:
    metadata:
      labels:
        app: smart-home-dashboard
    spec:
      containers:
        - name: smart-home-dashboard-container
          image: nadavnv/smart-home-dashboard:latest
          resources:
            limits:
              cpu: 300m
              memory: 200Mi
            requests:
              cpu: 200m
              memory: 100Mi
          ports:
            - containerPort: 3001
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
                # Verify that the frontend is connected to the backend
                - /bin/sh
                - -c
                - curl -sf http://smart-home-backend-svc:5200/ready
            initialDelaySeconds: 5
            periodSeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
---
# Dashboard service
apiVersion: v1
kind: Service
metadata:
  name: smart-home-dashboard-svc
  namespace: smart-home
spec:
  type: LoadBalancer
  selector:
    app: smart-home-dashboard
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smart-home-dashboard-ingress
  namespace: smart-home
  labels:
    app.kubernetes.io/name: smart-home-dashboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: smart-home-dashboard.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: smart-home-dashboard-svc
                port:
                  number: 3001
